@startuml IR

class IR {
  alveolus Alveolus[]
}
enum Alveolus {
  Larvie
}
enum Flora {
  Int
  Str
  Bool
  Bug
}
enum Seal {
' NotNull
    Vital
' PrimaryKey
    Core
' Unique
    Root
}

class Larvie {
  primor Str
  casts Casts[]
  instincts Instinct[]
}

class Casts {
  primor Str
  flora Flora
  seal Seal
}

class Instinct {
  echo Str
}

IR --> Alveolus
Alveolus --> Larvie

Casts --> Flora
Casts --> Seal

Larvie --> Casts
Larvie --> Instinct
@enduml

